md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -97,7 +97,7 @@ c) Functions [`torch.add()`](https://pytorch.org/docs/stable/generated/torch.add
 t = torch.tensor([[1,2,3,4]])
 w = torch.tensor([[-1],[-2]])
 ```
-`torch.add(t,w)` $\Rightarrow$ `tensor([[0,1,2,3],[-1,0,1,2]])`
+`torch.add(t,w)` $\Rightarrow$ `tensor([[0,1,2,3],[-1,0,1,2]])`\
 `torch.mul(t,w)` $\Rightarrow$ `tensor([[-1,-2,-3,-4],[-2,-4,-6,-8]])`
 
 ### Matrix multiplication
@@ -106,7 +106,7 @@ Matrix multiplication can be performed using [`torch.matmul()`](https://pytorch.
 a = torch.randn(2,3,3)
 b = torch.randn(3,2)
 ```
-`torch.mm(a,b)` $\Rightarrow$ runtime error (RE)
+`torch.mm(a,b)` $\Rightarrow$ runtime error (RE)\
 `torch.matmul(a,b).size()` $\Rightarrow$ `torch.Size([2, 3, 2])`
 Note: \
 a) `torch.mm()` only accepts 2D tensors\
@@ -119,11 +119,11 @@ b = torch.tensor([[-1,-2],[-3,-4]])
 `b@a` $\Rightarrow$ `tensor([-5,-11])` \
 Note that if `a` would have an extra pair of square brackets (`a = torch.tensor([[1,2]])`), `b@a` would cause a RE. `a@b` would work though.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU4NDk0NTAxNCwtMTA2ODQ5NzU1MiwxOD
-QwMjI3NjU3LC05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5
-NzQ0NywtODgzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNT
-UsLTIwNjY4OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwt
-MjczMDE0NjI0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MT
-U3OTMwNSwxNDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5
-MjcsLTEzNjY4Mzg0NDNdfQ==
+eyJoaXN0b3J5IjpbLTMwNDEyNDkwLC0xMDY4NDk3NTUyLDE4ND
+AyMjc2NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3
+NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NS
+wtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0y
+NzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNT
+c5MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTky
+NywtMTM2NjgzODQ0M119
 -->
