md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -61,7 +61,7 @@ Examples:
 
 ### Tensor datatypes
 
-You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors.html#data-types) for your tensor using the [attribute `torch.dtype`](https://pytorch.org/docs/stable/tensor_attributes.html#torch.dtype) like this:\
+You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors.html#data-types) for your tensor using the [attribute `torch.dtype`](https://pytorch.org/docs/stable/tensor_attributes.html#torch.dtype) like this:
 ```py 
 s = torch.tensor([3.0, 6.0, 9.0],dtype=torch.float16)
 ```
@@ -119,11 +119,11 @@ b = torch.tensor([[-1,-2],[-3,-4]])
 `b@a` $\Rightarrow$ `tensor([-5,-11])` \
 Note that if `a` would have an extra pair of square brackets (`a = torch.tensor([[1,2]])`), `b@a` would cause a RE. `a@b` would work though.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMwNDEyNDkwLC0xMDY4NDk3NTUyLDE4ND
-AyMjc2NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3
-NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NS
-wtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0y
-NzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNT
-c5MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTky
-NywtMTM2NjgzODQ0M119
+eyJoaXN0b3J5IjpbLTcyMDQxNjEzOCwtMzA0MTI0OTAsLTEwNj
+g0OTc1NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC0xNzE5OTEz
+Mzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNzMyMS
+wxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2
+Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5ODI1Mz
+QzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTky
+OCwxMzA4Mjc1OTI3XX0=
 -->
