--- a/md/00.md
+++ b/md/00.md
@@ -118,12 +118,15 @@ b = torch.tensor([[-1,-2],[-3,-4]])
 ```
 `b@a` $\Rightarrow$ `tensor([-5,-11])` \
 Note that if `a` would have an extra pair of square brackets (`a = torch.tensor([[1,2]])`), `b@a` would cause a RE. `a@b` would work though.
+
+### Transpose and shape
+https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb#scrollTo=One_of_the_most_common_errors_in_deep_learning_shape_errors_
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcyMDQxNjEzOCwtMzA0MTI0OTAsLTEwNj
-g0OTc1NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC0xNzE5OTEz
-Mzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNzMyMS
-wxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2
-Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5ODI1Mz
-QzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTky
-OCwxMzA4Mjc1OTI3XX0=
+eyJoaXN0b3J5IjpbMjA3Njg1NzYzOCwtNzIwNDE2MTM4LC0zMD
+QxMjQ5MCwtMTA2ODQ5NzU1MiwxODQwMjI3NjU3LC05NTg2NjI2
+NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtODgzNDYyNDAzLC
+0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OTQxMjcsLTEz
+NTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0LDMyOTYwNT
+M3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwxNDA4NzM2NTQ1
+LC0xODMyODQxOTI4XX0=
 -->
