--- a/md/00.md
+++ b/md/00.md
@@ -119,14 +119,14 @@ b = torch.tensor([[-1,-2],[-3,-4]])
 `b@a` $\Rightarrow$ `tensor([-5,-11])` \
 Note that if `a` would have an extra pair of square brackets (`a = torch.tensor([[1,2]])`), `b@a` would cause a RE. `a@b` would work though.
 
-### Tensor tras
-https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb#scrollTo=One_of_the_most_common_errors_in_deep_learning_shape_errors_
+### Tensor transpose
+If the tensor is 2D (a matrix), you can access its transpose via `tensor.T`, but this actually works for any kind of tensor. You 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTg5MTM4MjQwLDIwNzY4NTc2MzgsLTcyMD
-QxNjEzOCwtMzA0MTI0OTAsLTEwNjg0OTc1NTIsMTg0MDIyNzY1
-NywtOTU4NjYyNjY0LC0xNzE5OTEzMzc2LC02Njc0OTc0NDcsLT
-g4MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2
-ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxND
-YyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMDUs
-MTQwODczNjU0NV19
+eyJoaXN0b3J5IjpbMTkzNjIzNjgzMiwyMDc2ODU3NjM4LC03Mj
+A0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3NTUyLDE4NDAyMjc2
+NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3NDQ3LC
+04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2
+Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMT
+Q2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1
+LDE0MDg3MzY1NDVdfQ==
 -->
