md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -120,13 +120,13 @@ b = torch.tensor([[-1,-2],[-3,-4]])
 Note that if `a` would have an extra pair of square brackets (`a = torch.tensor([[1,2]])`), `b@a` would cause a RE. `a@b` would work though.
 
 ### Tensor transpose
-If the tensor is 2D (a matrix), you can access its transpose via [`tensor.T`](https://pytorch.org/docs/stable/tensors.html?highlight=tensor+t#torch.Tensor.T), but this actually works for any kind of tensor. You can also transpose (swap) only 2 given dimensions using [`torch.transpose(input,dim0,dim1)`](https://pytorch.org/docs/stable/generated/torch.transpose.html#torch.transpose). [`torch.t(input)`](https://pytorch.org/docs/stable/generated/torch.t.html#torch.t) also works for tensors with at most 2 dimensions.
+If the tensor is 2D (a matrix), you can access its transpose via [`tensor.T`](https://pytorch.org/docs/stable/tensors.html?highlight=tensor+t#torch.Tensor.T), but this actually works for any kind of tensor. You can also transpose (swap) only 2 given dimensions using the [`torch.transpose(input,dim0,dim1)`](https://pytorch.org/docs/stable/generated/torch.transpose.html#torch.transpose) function. [`torch.t(input)`](https://pytorch.org/docs/stable/generated/torch.t.html#torch.t) also works for tensors with at most 2 dimensions. [tensor.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDEyNDcxODIsMjA3Njg1NzYzOCwtNzIwND
-E2MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1MiwxODQwMjI3NjU3
-LC05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtOD
-gzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4
-OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0Nj
-I0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwx
-NDA4NzM2NTQ1XX0=
+eyJoaXN0b3J5IjpbMTQ2OTE3MDc3MywyMDc2ODU3NjM4LC03Mj
+A0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3NTUyLDE4NDAyMjc2
+NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3NDQ3LC
+04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2
+Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMT
+Q2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1
+LDE0MDg3MzY1NDVdfQ==
 -->
