--- a/md/00.md
+++ b/md/00.md
@@ -120,9 +120,9 @@ b = torch.tensor([[-1,-2],[-3,-4]])
 Note that if `a` would have an extra pair of square brackets (`a = torch.tensor([[1,2]])`), `b@a` would cause a RE. `a@b` would work though.
 
 ### Tensor transpose
-If the tensor is 2D (a matrix), you can access its transpose via [`tensor.T`](https://pytorch.org/docs/stable/tensors.html?highlight=tensor+t#torch.Tensor.T), but this actually works for any kind of tensor. You can also transpose (swap) only 2 given dimensions using the [`torch.transpose(input,dim0,dim1)`](https://pytorch.org/docs/stable/generated/torch.transpose.html#torch.transpose) function. [`torch.t(input)`](https://pytorch.org/docs/stable/generated/torch.t.html#torch.t) also works for tensors with at most 2 dimensions. [tensor.
+If the tensor is 2D (a matrix), you can access its transpose via [`tensor.T`](https://pytorch.org/docs/stable/tensors.html?highlight=tensor+t#torch.Tensor.T), but this actually works for any kind of tensor. You can also transpose (swap) only 2 given dimensions using the [`torch.transpose(input,dim0,dim1)`](https://pytorch.org/docs/stable/generated/torch.transpose.html#torch.transpose) function. [`torch.t(input)`](https://pytorch.org/docs/stable/generated/torch.t.html#torch.t) also works for tensors with at most 2 dimensions. [tensor.mT](https://pytorch.org/docs/stable/tensors.html?highlight=tensor+mt#torch.Tensor.mT) returns a view of `tensor` with the last two dimensions transposed (`x.mT`  is equivalent  to  `x.transpose(-2,  -1)`).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ2OTE3MDc3MywyMDc2ODU3NjM4LC03Mj
+eyJoaXN0b3J5IjpbMTgyNDU2MzM4OCwyMDc2ODU3NjM4LC03Mj
 A0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3NTUyLDE4NDAyMjc2
 NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3NDQ3LC
 04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2
