--- a/md/00.md
+++ b/md/00.md
@@ -121,12 +121,14 @@ Note that if `a` would have an extra pair of square brackets (`a = torch.tensor(
 
 ### Tensor transpose
 If the tensor is 2D (a matrix), you can access its transpose via [`tensor.T`](https://pytorch.org/docs/stable/tensors.html?highlight=tensor+t#torch.Tensor.T), but this actually works for any kind of tensor. You can also transpose (swap) only 2 given dimensions using the [`torch.transpose(input,dim0,dim1)`](https://pytorch.org/docs/stable/generated/torch.transpose.html#torch.transpose) function. [`torch.t(input)`](https://pytorch.org/docs/stable/generated/torch.t.html#torch.t) also works for tensors with at most 2 dimensions. [tensor.mT](https://pytorch.org/docs/stable/tensors.html?highlight=tensor+mt#torch.Tensor.mT) returns a view of `tensor` with the last two dimensions transposed (equivalent to `x.transpose(-2,  -1)`).
+
+### Change tensor datatype
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNTA1ODgyNzUsMjA3Njg1NzYzOCwtNz
-IwNDE2MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1MiwxODQwMjI3
-NjU3LC05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0Ny
-wtODgzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIw
-NjY4OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMD
-E0NjI0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMw
-NSwxNDA4NzM2NTQ1XX0=
+eyJoaXN0b3J5IjpbMTM5NjEyNjY0MSwtMTI1MDU4ODI3NSwyMD
+c2ODU3NjM4LC03MjA0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3
+NTUyLDE4NDAyMjc2NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3Ni
+wtNjY3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1
+MjIwMjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NT
+M3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4
+LC0xOTkxNTc5MzA1XX0=
 -->
