md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -121,10 +121,16 @@ Note that if `a` would have an extra pair of square brackets (`a = torch.tensor(
 
 ### Tensor transpose
 If the tensor is 2D (a matrix), you can access its transpose via [`tensor.T`](https://pytorch.org/docs/stable/tensors.html?highlight=tensor+t#torch.Tensor.T), but this actually works for any kind of tensor. You can also transpose (swap) only 2 given dimensions using the [`torch.transpose(input,dim0,dim1)`](https://pytorch.org/docs/stable/generated/torch.transpose.html#torch.transpose) function. [`torch.t(input)`](https://pytorch.org/docs/stable/generated/torch.t.html#torch.t) also works for tensors with at most 2 dimensions. [tensor.mT](https://pytorch.org/docs/stable/tensors.html?highlight=tensor+mt#torch.Tensor.mT) returns a view of `tensor` with the last two dimensions transposed (equivalent to `x.transpose(-2,  -1)`).
+```py
+b = torch.randn(40,30,20)
+m = torch.nn.Linear(20,30)
+m(b).size()
+```
+`torch.Size([40, 30, 30])`
 
 ### Change tensor datatype
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM5NjEyNjY0MSwtMTI1MDU4ODI3NSwyMD
+eyJoaXN0b3J5IjpbLTYzMjUzMTQ1NywtMTI1MDU4ODI3NSwyMD
 c2ODU3NjM4LC03MjA0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3
 NTUyLDE4NDAyMjc2NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3Ni
 wtNjY3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1
