md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -129,12 +129,13 @@ m(b).size()
 `torch.Size([40, 30, 30])`
 
 ### Change tensor datatype
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYzMjUzMTQ1NywtMTI1MDU4ODI3NSwyMD
-c2ODU3NjM4LC03MjA0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3
-NTUyLDE4NDAyMjc2NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3Ni
-wtNjY3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1
-MjIwMjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NT
-M3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4
-LC0xOTkxNTc5MzA1XX0=
+eyJoaXN0b3J5IjpbLTIzODc1NTczMSwtNjMyNTMxNDU3LC0xMj
+UwNTg4Mjc1LDIwNzY4NTc2MzgsLTcyMDQxNjEzOCwtMzA0MTI0
+OTAsLTEwNjg0OTc1NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC
+0xNzE5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTcz
+MTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NT
+Q0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcs
+LTE5ODI1MzQzNDhdfQ==
 -->
