md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -134,19 +134,14 @@ Examples are self-explanatory.
 a = torch.tensor([2,3,2])
 a.dtype
 ```
-`torch.int64`
+$\Rightarrow$ `torch.int64`
 ```py
-  
-b = a.type(torch.float32) b.dtype
-
-b  =  a.type(torch.float32)
-
+b = a.type(torch.float32)
 b.dtype
-
-torch.float32
 ```
+$\Rightarrow$ `torch.float32`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA0NTA1NDYyMiwtNjMyNTMxNDU3LC0xMj
+eyJoaXN0b3J5IjpbMjA0MTUzOTI0NCwtNjMyNTMxNDU3LC0xMj
 UwNTg4Mjc1LDIwNzY4NTc2MzgsLTcyMDQxNjEzOCwtMzA0MTI0
 OTAsLTEwNjg0OTc1NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC
 0xNzE5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTcz
