md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -140,12 +140,14 @@ b = a.type(torch.float32)
 b.dtype
 ```
 $\Rightarrow$ `torch.float32`
+
+### Reshape, stack, squeeze, unsqueeze and permute tensors
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA0MTUzOTI0NCwtNjMyNTMxNDU3LC0xMj
-UwNTg4Mjc1LDIwNzY4NTc2MzgsLTcyMDQxNjEzOCwtMzA0MTI0
-OTAsLTEwNjg0OTc1NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC
-0xNzE5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTcz
-MTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NT
-Q0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcs
-LTE5ODI1MzQzNDhdfQ==
+eyJoaXN0b3J5IjpbLTIwMDM1NDI2MzMsMjA0MTUzOTI0NCwtNj
+MyNTMxNDU3LC0xMjUwNTg4Mjc1LDIwNzY4NTc2MzgsLTcyMDQx
+NjEzOCwtMzA0MTI0OTAsLTEwNjg0OTc1NTIsMTg0MDIyNzY1Ny
+wtOTU4NjYyNjY0LC0xNzE5OTEzMzc2LC02Njc0OTc0NDcsLTg4
+MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2OD
+k0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYy
+NCwzMjk2MDUzNzddfQ==
 -->
