--- a/md/00.md
+++ b/md/00.md
@@ -142,12 +142,30 @@ b.dtype
 $\Rightarrow$ `torch.float32`
 
 ### Reshape, stack, squeeze, unsqueeze and permute tensors
+- [`torch.reshape(input, shape)`](https://pytorch.org/docs/stable/generated/torch.reshape.html#torch.reshape) reshapes  `input`  to  `shape`  (if compatible), can also use  `torch.Tensor.reshape()`.
+- [`torch.Tensor.view(shape)`](https://pytorch.org/docs/stable/generated/torch.Tensor.view.html#torch.Tensor.view) returns a view of the original tensor in a different  `shape`  but shares the same data as the original tensor.
+
+[`torch.stack(tensors, dim=0)`](https://colab.research.google.com/corgiredirector?site=https%3A%2F%2Fpytorch.org%2Fdocs%2F1.9.1%2Fgenerated%2Ftorch.stack.html&link_redirector=1)
+
+Concatenates a sequence of  `tensors`  along a new dimension (`dim`), all  `tensors`  must be same size.
+
+[`torch.squeeze(input)`](https://colab.research.google.com/corgiredirector?site=https%3A%2F%2Fpytorch.org%2Fdocs%2Fstable%2Fgenerated%2Ftorch.squeeze.html&link_redirector=1)
+
+Squeezes  `input`  to remove all the dimenions with value  `1`.
+
+[`torch.unsqueeze(input, dim)`](https://colab.research.google.com/corgiredirector?site=https%3A%2F%2Fpytorch.org%2Fdocs%2F1.9.1%2Fgenerated%2Ftorch.unsqueeze.html&link_redirector=1)
+
+Returns  `input`  with a dimension value of  `1`  added at  `dim`.
+
+[`torch.permute(input, dims)`](https://colab.research.google.com/corgiredirector?site=https%3A%2F%2Fpytorch.org%2Fdocs%2Fstable%2Fgenerated%2Ftorch.permute.html&link_redirector=1)
+
+Returns a  _view_  of the original  `input`  with its dimensions permuted (rearranged) to  `dims`.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMDM1NDI2MzMsMjA0MTUzOTI0NCwtNj
-MyNTMxNDU3LC0xMjUwNTg4Mjc1LDIwNzY4NTc2MzgsLTcyMDQx
-NjEzOCwtMzA0MTI0OTAsLTEwNjg0OTc1NTIsMTg0MDIyNzY1Ny
-wtOTU4NjYyNjY0LC0xNzE5OTEzMzc2LC02Njc0OTc0NDcsLTg4
-MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2OD
-k0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYy
-NCwzMjk2MDUzNzddfQ==
+eyJoaXN0b3J5IjpbMTA3ODgwMjcwMywyMDQxNTM5MjQ0LC02Mz
+I1MzE0NTcsLTEyNTA1ODgyNzUsMjA3Njg1NzYzOCwtNzIwNDE2
+MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1MiwxODQwMjI3NjU3LC
+05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtODgz
+NDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OT
+QxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0
+LDMyOTYwNTM3N119
 -->
