md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -145,20 +145,11 @@ $\Rightarrow$ `torch.float32`
 - [`torch.reshape(input, shape)`](https://pytorch.org/docs/stable/generated/torch.reshape.html#torch.reshape) reshapes  `input`  to  `shape`  (if compatible), can also use  `torch.Tensor.reshape()`.
 - [`torch.Tensor.view(shape)`](https://pytorch.org/docs/stable/generated/torch.Tensor.view.html#torch.Tensor.view) returns a view of the original tensor in a different  `shape`  but shares the same data as the original tensor. (similar to `reshape`)
 - [`torch.stack(tensors, dim=0)`](https://pytorch.org/docs/1.9.1/generated/torch.stack.html) concatenates a sequence of  `tensors`  along a new dimension (`dim`), all  `tensors`  must be same size.
-
-[`torch.squeeze(input)`](https://colab.research.google.com/corgiredirector?site=https%3A%2F%2Fpytorch.org%2Fdocs%2Fstable%2Fgenerated%2Ftorch.squeeze.html&link_redirector=1)
-
-Squeezes  `input`  to remove all the dimenions with value  `1`.
-
-[`torch.unsqueeze(input, dim)`](https://colab.research.google.com/corgiredirector?site=https%3A%2F%2Fpytorch.org%2Fdocs%2F1.9.1%2Fgenerated%2Ftorch.unsqueeze.html&link_redirector=1)
-
-Returns  `input`  with a dimension value of  `1`  added at  `dim`.
-
-[`torch.permute(input, dims)`](https://colab.research.google.com/corgiredirector?site=https%3A%2F%2Fpytorch.org%2Fdocs%2Fstable%2Fgenerated%2Ftorch.permute.html&link_redirector=1)
-
-Returns a  _view_  of the original  `input`  with its dimensions permuted (rearranged) to  `dims`.
+- [`torch.squeeze(input)`](https://pytorch.org/docs/stable/generated/torch.squeeze.html) squeezes  `input`  to remove all the dimensions with value `1`.
+- [`torch.unsqueeze(input, dim)`](https://pytorch.org/docs/1.9.1/generated/torch.unsqueeze.html) returns  `input`  with a dimension value of  `1`  added at  `dim`.
+- [`torch.permute(input, dims)`](https://pytorch.org/docs/stable/generated/torch.permute.html) returns a  _view_  of the original  `input`  with its dimensions permuted (rearranged) to  `dims`.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTY1ODQ3NzUwLDIwNDE1MzkyNDQsLTYzMj
+eyJoaXN0b3J5IjpbNTMxOTAwMTIxLDIwNDE1MzkyNDQsLTYzMj
 UzMTQ1NywtMTI1MDU4ODI3NSwyMDc2ODU3NjM4LC03MjA0MTYx
 MzgsLTMwNDEyNDkwLC0xMDY4NDk3NTUyLDE4NDAyMjc2NTcsLT
 k1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3NDQ3LC04ODM0
