--- a/md/00.md
+++ b/md/00.md
@@ -143,17 +143,17 @@ $\Rightarrow$ `torch.float32`
 
 ### Reshape, stack, squeeze, unsqueeze and permute tensors
 - [`torch.reshape(input, shape)`](https://pytorch.org/docs/stable/generated/torch.reshape.html#torch.reshape) reshapes  `input`  to  `shape`  (if compatible), can also use  `torch.Tensor.reshape()`.
-- [`torch.Tensor.view(shape)`](https://pytorch.org/docs/stable/generated/torch.Tensor.view.html#torch.Tensor.view) returns a view of the original tensor in a different  `shape`  but shares the same data as the original tensor. (similar to `reshape`)
+- [`torch.Tensor.view(shape)`](https://pytorch.org/docs/stable/generated/torch.Tensor.view.html#torch.Tensor.view) returns a view of the original tensor in a different  `shape`  but shares the same data as the original tensor. (similar to `reshape`, doesn't allocate new memory but doesn't always work)
 - [`torch.stack(tensors, dim=0)`](https://pytorch.org/docs/1.9.1/generated/torch.stack.html) concatenates a sequence of  `tensors`  along a new dimension (`dim`), all  `tensors`  must be same size.
 - [`torch.squeeze(input)`](https://pytorch.org/docs/stable/generated/torch.squeeze.html) squeezes  `input`  to remove all the dimensions with value `1`.
 - [`torch.unsqueeze(input, dim)`](https://pytorch.org/docs/1.9.1/generated/torch.unsqueeze.html) returns  `input`  with a dimension value of  `1`  added at  `dim`.
 - [`torch.permute(input, dims)`](https://pytorch.org/docs/stable/generated/torch.permute.html) returns a  _view_  of the original  `input`  with its dimensions permuted (rearranged) to  `dims`.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTMxOTAwMTIxLDIwNDE1MzkyNDQsLTYzMj
-UzMTQ1NywtMTI1MDU4ODI3NSwyMDc2ODU3NjM4LC03MjA0MTYx
-MzgsLTMwNDEyNDkwLC0xMDY4NDk3NTUyLDE4NDAyMjc2NTcsLT
-k1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3NDQ3LC04ODM0
-NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5ND
-EyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQs
-MzI5NjA1Mzc3XX0=
+eyJoaXN0b3J5IjpbLTk0NDcyNTg2NiwyMDQxNTM5MjQ0LC02Mz
+I1MzE0NTcsLTEyNTA1ODgyNzUsMjA3Njg1NzYzOCwtNzIwNDE2
+MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1MiwxODQwMjI3NjU3LC
+05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtODgz
+NDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OT
+QxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0
+LDMyOTYwNTM3N119
 -->
