md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -147,13 +147,13 @@ $\Rightarrow$ `torch.float32`
 - [`torch.stack(tensors, dim=0)`](https://pytorch.org/docs/1.9.1/generated/torch.stack.html) concatenates a sequence of  `tensors`  along a new dimension (`dim`), all  `tensors`  must be same size.
 - [`torch.squeeze(input)`](https://pytorch.org/docs/stable/generated/torch.squeeze.html) squeezes  `input`  to remove all the dimensions with value `1`.
 - [`torch.unsqueeze(input, dim)`](https://pytorch.org/docs/1.9.1/generated/torch.unsqueeze.html) returns  `input`  with a dimension value of  `1`  added at  `dim`.
-- [`torch.permute(input, dims)`](https://pytorch.org/docs/stable/generated/torch.permute.html) returns a  _view_  of the original  `input`  with its dimensions permuted (rearranged) to  `dims`.
+- [`torch.permute(input, dims)`](https://pytorch.org/docs/stable/generated/torch.permute.html) returns a  _view_  of the original  `input`  with its dimensions permuted (rearranged) to  `dims`. **Note**: Because permuting returns a _view_ (shares the same data as the original), the values in the permuted tensor will be the same as the original tensor and if you change the values in the view, it will change the values of the original.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk0NDcyNTg2NiwyMDQxNTM5MjQ0LC02Mz
-I1MzE0NTcsLTEyNTA1ODgyNzUsMjA3Njg1NzYzOCwtNzIwNDE2
-MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1MiwxODQwMjI3NjU3LC
-05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtODgz
-NDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OT
-QxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0
-LDMyOTYwNTM3N119
+eyJoaXN0b3J5IjpbNDkwMTAzMDA3LDIwNDE1MzkyNDQsLTYzMj
+UzMTQ1NywtMTI1MDU4ODI3NSwyMDc2ODU3NjM4LC03MjA0MTYx
+MzgsLTMwNDEyNDkwLC0xMDY4NDk3NTUyLDE4NDAyMjc2NTcsLT
+k1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3NDQ3LC04ODM0
+NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5ND
+EyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQs
+MzI5NjA1Mzc3XX0=
 -->
