md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -149,13 +149,14 @@ $\Rightarrow$ `torch.float32`
 - [`torch.unsqueeze(input, dim)`](https://pytorch.org/docs/1.9.1/generated/torch.unsqueeze.html) returns  `input`  with a dimension value of  `1`  added at  `dim`.
 - [`torch.permute(input, dims)`](https://pytorch.org/docs/stable/generated/torch.permute.html) returns a  _view_  of the original  `input`  with its dimensions permuted (rearranged) to  `dims`. **Note**: Because permuting returns a _view_ (shares the same data as the original), the values in the permuted tensor will be the same as the original tensor and if you change the values in the view, it will change the values of the original.
 
-### Selecting data from tens
+### Selecting data from tensors
+https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb#scrollTo=Indexing_selecting_data_from_tensors_
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MDY1OTAzODYsMjA0MTUzOTI0NCwtNj
-MyNTMxNDU3LC0xMjUwNTg4Mjc1LDIwNzY4NTc2MzgsLTcyMDQx
-NjEzOCwtMzA0MTI0OTAsLTEwNjg0OTc1NTIsMTg0MDIyNzY1Ny
-wtOTU4NjYyNjY0LC0xNzE5OTEzMzc2LC02Njc0OTc0NDcsLTg4
-MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2OD
-k0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYy
-NCwzMjk2MDUzNzddfQ==
+eyJoaXN0b3J5IjpbMTE0MTA3MzgwNCwyMDQxNTM5MjQ0LC02Mz
+I1MzE0NTcsLTEyNTA1ODgyNzUsMjA3Njg1NzYzOCwtNzIwNDE2
+MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1MiwxODQwMjI3NjU3LC
+05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtODgz
+NDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OT
+QxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0
+LDMyOTYwNTM3N119
 -->
