--- a/md/00.md
+++ b/md/00.md
@@ -150,13 +150,23 @@ $\Rightarrow$ `torch.float32`
 - [`torch.permute(input, dims)`](https://pytorch.org/docs/stable/generated/torch.permute.html) returns a  _view_  of the original  `input`  with its dimensions permuted (rearranged) to  `dims`. **Note**: Because permuting returns a _view_ (shares the same data as the original), the values in the permuted tensor will be the same as the original tensor and if you change the values in the view, it will change the values of the original.
 
 ### Selecting data from tensors
-https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb#scrollTo=Indexing_selecting_data_from_tensors_
+It's easier to learn via examples:
+```py
+x  =  torch.arange(1, 10).reshape(1, 3, 3)
+(x, x.shape)
+```
+```cpp
+(tensor([[[1, 2, 3],
+          [4, 5, 6],
+          [7, 8, 9]]]),
+ torch.Size([1, 3, 3]))
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE0MTA3MzgwNCwyMDQxNTM5MjQ0LC02Mz
-I1MzE0NTcsLTEyNTA1ODgyNzUsMjA3Njg1NzYzOCwtNzIwNDE2
-MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1MiwxODQwMjI3NjU3LC
-05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtODgz
-NDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OT
-QxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0
-LDMyOTYwNTM3N119
+eyJoaXN0b3J5IjpbMTYyMjMyMzEwNSwxMTQxMDczODA0LDIwND
+E1MzkyNDQsLTYzMjUzMTQ1NywtMTI1MDU4ODI3NSwyMDc2ODU3
+NjM4LC03MjA0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3NTUyLD
+E4NDAyMjc2NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNjY3
+NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMj
+I1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0
+LC0yNzMwMTQ2MjRdfQ==
 -->
