md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -155,18 +155,18 @@ It's easier to learn via examples:
 x  =  torch.arange(1, 10).reshape(1, 3, 3)
 (x, x.shape)
 ```
-```cpp
+```as 
 (tensor([[[1, 2, 3],
           [4, 5, 6],
           [7, 8, 9]]]),
  torch.Size([1, 3, 3]))
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYyMjMyMzEwNSwxMTQxMDczODA0LDIwND
-E1MzkyNDQsLTYzMjUzMTQ1NywtMTI1MDU4ODI3NSwyMDc2ODU3
-NjM4LC03MjA0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3NTUyLD
-E4NDAyMjc2NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNjY3
-NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMj
-I1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0
-LC0yNzMwMTQ2MjRdfQ==
+eyJoaXN0b3J5IjpbMTc4NTMxMjA0NCwxNjIyMzIzMTA1LDExND
+EwNzM4MDQsMjA0MTUzOTI0NCwtNjMyNTMxNDU3LC0xMjUwNTg4
+Mjc1LDIwNzY4NTc2MzgsLTcyMDQxNjEzOCwtMzA0MTI0OTAsLT
+EwNjg0OTc1NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC0xNzE5
+OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNz
+MyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5
+LDE2Nzk1MzcwNzRdfQ==
 -->
