--- a/md/00.md
+++ b/md/00.md
@@ -155,14 +155,14 @@ It's easier to learn via examples:
 x  =  torch.arange(1, 10).reshape(1, 3, 3)
 (x, x.shape)
 ```
-```as 
+```cpp
 (tensor([[[1, 2, 3],
           [4, 5, 6],
           [7, 8, 9]]]),
  torch.Size([1, 3, 3]))
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc4NTMxMjA0NCwxNjIyMzIzMTA1LDExND
+eyJoaXN0b3J5IjpbMTYyMjMyMzEwNSwxNjIyMzIzMTA1LDExND
 EwNzM4MDQsMjA0MTUzOTI0NCwtNjMyNTMxNDU3LC0xMjUwNTg4
 Mjc1LDIwNzY4NTc2MzgsLTcyMDQxNjEzOCwtMzA0MTI0OTAsLT
 EwNjg0OTc1NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC0xNzE5
