--- a/md/00.md
+++ b/md/00.md
@@ -161,12 +161,21 @@ x  =  torch.arange(1, 10).reshape(1, 3, 3)
           [7, 8, 9]]]),
  torch.Size([1, 3, 3]))
 ```
+---
+```py
+print(f"First square bracket:\n{x[0]}")
+print(f"Second square bracket: {x[0][0]}")
+print(f"Third square bracket: {x[0][0][0]}")
+```
+```cpp
+
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYyMjMyMzEwNSwxNjIyMzIzMTA1LDExND
-EwNzM4MDQsMjA0MTUzOTI0NCwtNjMyNTMxNDU3LC0xMjUwNTg4
-Mjc1LDIwNzY4NTc2MzgsLTcyMDQxNjEzOCwtMzA0MTI0OTAsLT
-EwNjg0OTc1NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC0xNzE5
-OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNz
-MyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5
-LDE2Nzk1MzcwNzRdfQ==
+eyJoaXN0b3J5IjpbNDYzNDk5NTE0LDE2MjIzMjMxMDUsMTYyMj
+MyMzEwNSwxMTQxMDczODA0LDIwNDE1MzkyNDQsLTYzMjUzMTQ1
+NywtMTI1MDU4ODI3NSwyMDc2ODU3NjM4LC03MjA0MTYxMzgsLT
+MwNDEyNDkwLC0xMDY4NDk3NTUyLDE4NDAyMjc2NTcsLTk1ODY2
+MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3NDQ3LC04ODM0NjI0MD
+MsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5NDEyNywt
+MTM1ODU0NDgwOV19
 -->
