md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -167,11 +167,13 @@ print(f"First square bracket:\n{x[0]}")
 print(f"Second square bracket: {x[0][0]}")
 print(f"Third square bracket: {x[0][0][0]}")
 ```
-```cpp
-
+```
+First square bracket: tensor([[1, 2, 3], [4, 5, 6], [7, 8, 9]])
+Second square bracket: tensor([1, 2, 3]) 
+Third square bracket: 1
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDYzNDk5NTE0LDE2MjIzMjMxMDUsMTYyMj
+eyJoaXN0b3J5IjpbMzQxNjkwOTc5LDE2MjIzMjMxMDUsMTYyMj
 MyMzEwNSwxMTQxMDczODA0LDIwNDE1MzkyNDQsLTYzMjUzMTQ1
 NywtMTI1MDU4ODI3NSwyMDc2ODU3NjM4LC03MjA0MTYxMzgsLT
 MwNDEyNDkwLC0xMDY4NDk3NTUyLDE4NDAyMjc2NTcsLTk1ODY2
