md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -172,12 +172,14 @@ First square bracket: tensor([[1, 2, 3], [4, 5, 6], [7, 8, 9]])
 Second square bracket: tensor([1, 2, 3]) 
 Third square bracket: 1
 ```
+---
+You can also use `:` to specify "all values in this dimension" and then use a comma (`,`) to add another dimension:
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzQxNjkwOTc5LDE2MjIzMjMxMDUsMTYyMj
-MyMzEwNSwxMTQxMDczODA0LDIwNDE1MzkyNDQsLTYzMjUzMTQ1
-NywtMTI1MDU4ODI3NSwyMDc2ODU3NjM4LC03MjA0MTYxMzgsLT
-MwNDEyNDkwLC0xMDY4NDk3NTUyLDE4NDAyMjc2NTcsLTk1ODY2
-MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3NDQ3LC04ODM0NjI0MD
-MsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5NDEyNywt
-MTM1ODU0NDgwOV19
+eyJoaXN0b3J5IjpbMTEyMDUzNjExMiwzNDE2OTA5NzksMTYyMj
+MyMzEwNSwxNjIyMzIzMTA1LDExNDEwNzM4MDQsMjA0MTUzOTI0
+NCwtNjMyNTMxNDU3LC0xMjUwNTg4Mjc1LDIwNzY4NTc2MzgsLT
+cyMDQxNjEzOCwtMzA0MTI0OTAsLTEwNjg0OTc1NTIsMTg0MDIy
+NzY1NywtOTU4NjYyNjY0LC0xNzE5OTEzMzc2LC02Njc0OTc0ND
+csLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAyMjU1LC0y
+MDY2ODk0MTI3XX0=
 -->
