--- a/md/00.md
+++ b/md/00.md
@@ -173,13 +173,25 @@ Second square bracket: tensor([1, 2, 3])
 Third square bracket: 1
 ```
 ---
-You can also use `:` to specify "all values in this dimension" and then use a comma (`,`) to add another dimension:
+You can also use `:` to specify "all values in this dimension" and then use a comma (`,`) to add another dimension:]
+```py
+print(x[:, 0])
+print(x[:, :, 1])
+print(x[:, 1, 1])
+print(x[0, 0, :]) # same as x[0][0]
+```
+```cpp
+tensor([[1, 2, 3]])
+tensor([[2, 5, 8]])
+tensor([5])
+tensor([1, 2, 3])
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEyMDUzNjExMiwzNDE2OTA5NzksMTYyMj
-MyMzEwNSwxNjIyMzIzMTA1LDExNDEwNzM4MDQsMjA0MTUzOTI0
-NCwtNjMyNTMxNDU3LC0xMjUwNTg4Mjc1LDIwNzY4NTc2MzgsLT
-cyMDQxNjEzOCwtMzA0MTI0OTAsLTEwNjg0OTc1NTIsMTg0MDIy
-NzY1NywtOTU4NjYyNjY0LC0xNzE5OTEzMzc2LC02Njc0OTc0ND
-csLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAyMjU1LC0y
-MDY2ODk0MTI3XX0=
+eyJoaXN0b3J5IjpbMjc4OTM3MDQ3LDM0MTY5MDk3OSwxNjIyMz
+IzMTA1LDE2MjIzMjMxMDUsMTE0MTA3MzgwNCwyMDQxNTM5MjQ0
+LC02MzI1MzE0NTcsLTEyNTA1ODgyNzUsMjA3Njg1NzYzOCwtNz
+IwNDE2MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1MiwxODQwMjI3
+NjU3LC05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0Ny
+wtODgzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIw
+NjY4OTQxMjddfQ==
 -->
