--- a/md/00.md
+++ b/md/00.md
@@ -186,12 +186,16 @@ tensor([[2, 5, 8]])
 tensor([5])
 tensor([1, 2, 3])
 ```
+## ### PyTorch tensors & NumPy
+The two main methods you'll want to use for NumPy to PyTorch (and back again) are:
+* [`torch.from_numpy(ndarray)`](https://pytorch.org/docs/stable/generated/torch.from_numpy.html): NumPy array -> PyTorch tensor.
+* [`torch.Tensor.numpy()`](https://pytorch.org/docs/stable/generated/torch.Tensor.numpy.html): PyTorch tensor -> NumPy array.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjc4OTM3MDQ3LDM0MTY5MDk3OSwxNjIyMz
-IzMTA1LDE2MjIzMjMxMDUsMTE0MTA3MzgwNCwyMDQxNTM5MjQ0
-LC02MzI1MzE0NTcsLTEyNTA1ODgyNzUsMjA3Njg1NzYzOCwtNz
-IwNDE2MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1MiwxODQwMjI3
-NjU3LC05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0Ny
-wtODgzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIw
-NjY4OTQxMjddfQ==
+eyJoaXN0b3J5IjpbNTczMDI2ODgwLDI3ODkzNzA0NywzNDE2OT
+A5NzksMTYyMjMyMzEwNSwxNjIyMzIzMTA1LDExNDEwNzM4MDQs
+MjA0MTUzOTI0NCwtNjMyNTMxNDU3LC0xMjUwNTg4Mjc1LDIwNz
+Y4NTc2MzgsLTcyMDQxNjEzOCwtMzA0MTI0OTAsLTEwNjg0OTc1
+NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC0xNzE5OTEzMzc2LC
+02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMzUy
+MjAyMjU1XX0=
 -->
