md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -190,12 +190,21 @@ tensor([1, 2, 3])
 The two main methods you'll want to use for NumPy to PyTorch (and back again) are:
 * [`torch.from_numpy(ndarray)`](https://pytorch.org/docs/stable/generated/torch.from_numpy.html): NumPy array -> PyTorch tensor.
 * [`torch.Tensor.numpy()`](https://pytorch.org/docs/stable/generated/torch.Tensor.numpy.html): PyTorch tensor -> NumPy array.
+```py
+import numpy as np
+array = np.arange(1.0,  8.0)
+tensor = torch.from_numpy(array)
+array, tensor
+```
+```cpp
+(array([1., 2., 3., 4., 5., 6., 7.]), tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))
+ ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTczMDI2ODgwLDI3ODkzNzA0NywzNDE2OT
-A5NzksMTYyMjMyMzEwNSwxNjIyMzIzMTA1LDExNDEwNzM4MDQs
-MjA0MTUzOTI0NCwtNjMyNTMxNDU3LC0xMjUwNTg4Mjc1LDIwNz
-Y4NTc2MzgsLTcyMDQxNjEzOCwtMzA0MTI0OTAsLTEwNjg0OTc1
-NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC0xNzE5OTEzMzc2LC
-02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMzUy
-MjAyMjU1XX0=
+eyJoaXN0b3J5IjpbMjI0NzU5NjAsMjc4OTM3MDQ3LDM0MTY5MD
+k3OSwxNjIyMzIzMTA1LDE2MjIzMjMxMDUsMTE0MTA3MzgwNCwy
+MDQxNTM5MjQ0LC02MzI1MzE0NTcsLTEyNTA1ODgyNzUsMjA3Nj
+g1NzYzOCwtNzIwNDE2MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1
+MiwxODQwMjI3NjU3LC05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLT
+Y2NzQ5NzQ0NywtODgzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIy
+MDIyNTVdfQ==
 -->
