md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -199,12 +199,20 @@ array, tensor
 ```cpp
 (array([1., 2., 3., 4., 5., 6., 7.]), tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))
  ```
+
+ ---
+
+```py
+tensor = torch.ones(7)  # create a tensor of ones with dtype=float32
+numpy_tensor = tensor.numpy()  # will be dtype=float32 unless changed
+tensor, numpy_tensor
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjI0NzU5NjAsMjc4OTM3MDQ3LDM0MTY5MD
-k3OSwxNjIyMzIzMTA1LDE2MjIzMjMxMDUsMTE0MTA3MzgwNCwy
-MDQxNTM5MjQ0LC02MzI1MzE0NTcsLTEyNTA1ODgyNzUsMjA3Nj
-g1NzYzOCwtNzIwNDE2MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5NzU1
-MiwxODQwMjI3NjU3LC05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLT
-Y2NzQ5NzQ0NywtODgzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIy
-MDIyNTVdfQ==
+eyJoaXN0b3J5IjpbLTQ2MjMxNjAyMSwyNzg5MzcwNDcsMzQxNj
+kwOTc5LDE2MjIzMjMxMDUsMTYyMjMyMzEwNSwxMTQxMDczODA0
+LDIwNDE1MzkyNDQsLTYzMjUzMTQ1NywtMTI1MDU4ODI3NSwyMD
+c2ODU3NjM4LC03MjA0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3
+NTUyLDE4NDAyMjc2NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3Ni
+wtNjY3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1
+MjIwMjI1NV19
 -->
