--- a/md/00.md
+++ b/md/00.md
@@ -211,12 +211,14 @@ tensor, numpy_tensor
 (tensor([1., 1., 1., 1., 1., 1., 1.]), array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))
 ```
 
+## Randomness and reproducibility
+Completely reproducible results are not guaranteed across PyTorch releases, individual commits, or different platforms. Furthermore, results may not be reproducible between CPU and GPU executions, even when using identical seeds. [Read more](https://pytorch.org/docs/stable/notes/randomness.html).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODYzMTIzMzMsMjc4OTM3MDQ3LDM0MT
-Y5MDk3OSwxNjIyMzIzMTA1LDE2MjIzMjMxMDUsMTE0MTA3Mzgw
-NCwyMDQxNTM5MjQ0LC02MzI1MzE0NTcsLTEyNTA1ODgyNzUsMj
-A3Njg1NzYzOCwtNzIwNDE2MTM4LC0zMDQxMjQ5MCwtMTA2ODQ5
-NzU1MiwxODQwMjI3NjU3LC05NTg2NjI2NjQsLTE3MTk5MTMzNz
-YsLTY2NzQ5NzQ0NywtODgzNDYyNDAzLC0xNzMxMTE3MzIxLDEz
-NTIyMDIyNTVdfQ==
+eyJoaXN0b3J5IjpbLTgxMTUzMzY1OSwyNzg5MzcwNDcsMzQxNj
+kwOTc5LDE2MjIzMjMxMDUsMTYyMjMyMzEwNSwxMTQxMDczODA0
+LDIwNDE1MzkyNDQsLTYzMjUzMTQ1NywtMTI1MDU4ODI3NSwyMD
+c2ODU3NjM4LC03MjA0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3
+NTUyLDE4NDAyMjc2NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3Ni
+wtNjY3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1
+MjIwMjI1NV19
 -->
