md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -213,12 +213,13 @@ tensor, numpy_tensor
 
 ## Randomness and reproducibility
 Completely reproducible results are not guaranteed across PyTorch releases, individual commits, or different platforms. Furthermore, results may not be reproducible between CPU and GPU executions, even when using identical seeds. [Read more](https://pytorch.org/docs/stable/notes/randomness.html).
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgxMTUzMzY1OSwyNzg5MzcwNDcsMzQxNj
-kwOTc5LDE2MjIzMjMxMDUsMTYyMjMyMzEwNSwxMTQxMDczODA0
-LDIwNDE1MzkyNDQsLTYzMjUzMTQ1NywtMTI1MDU4ODI3NSwyMD
-c2ODU3NjM4LC03MjA0MTYxMzgsLTMwNDEyNDkwLC0xMDY4NDk3
-NTUyLDE4NDAyMjc2NTcsLTk1ODY2MjY2NCwtMTcxOTkxMzM3Ni
-wtNjY3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1
-MjIwMjI1NV19
+eyJoaXN0b3J5IjpbLTQ2MTE4MDAxMywtODExNTMzNjU5LDI3OD
+kzNzA0NywzNDE2OTA5NzksMTYyMjMyMzEwNSwxNjIyMzIzMTA1
+LDExNDEwNzM4MDQsMjA0MTUzOTI0NCwtNjMyNTMxNDU3LC0xMj
+UwNTg4Mjc1LDIwNzY4NTc2MzgsLTcyMDQxNjEzOCwtMzA0MTI0
+OTAsLTEwNjg0OTc1NTIsMTg0MDIyNzY1NywtOTU4NjYyNjY0LC
+0xNzE5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTcz
+MTExNzMyMV19
 -->
