md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -214,8 +214,10 @@ tensor, numpy_tensor
 ## Randomness and reproducibility
 Completely reproducible results are not guaranteed across PyTorch releases, individual commits, or different platforms. Furthermore, results may not be reproducible between CPU and GPU executions, even when using identical seeds. [Read more](https://pytorch.org/docs/stable/notes/randomness.html).
 
+## Running tensors on GPU
+Deep learning algorithms require a lot of numerical operations. And by default these operations are often done on a CPU (computer processing unit). However, there's another common piece of hardware called a GPU (graphics processing unit), which is often much faster at performing the specific types of operations neural networks need (matrix multiplications) than CPUs.[Read more](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb#scrollTo=Running_tensors_on_GPUs_and_making_faster_computations_).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ2MTE4MDAxMywtODExNTMzNjU5LDI3OD
+eyJoaXN0b3J5IjpbMjA0NjAxOTQ3OCwtODExNTMzNjU5LDI3OD
 kzNzA0NywzNDE2OTA5NzksMTYyMjMyMzEwNSwxNjIyMzIzMTA1
 LDExNDEwNzM4MDQsMjA0MTUzOTI0NCwtNjMyNTMxNDU3LC0xMj
 UwNTg4Mjc1LDIwNzY4NTc2MzgsLTcyMDQxNjEzOCwtMzA0MTI0
