md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -216,3 +216,6 @@ Completely reproducible results are not guaranteed across PyTorch releases, indi
 
 ## Running tensors on GPU
 Deep learning algorithms require a lot of numerical operations. And by default these operations are often done on a CPU (computer processing unit). However, there's another common piece of hardware called a GPU (graphics processing unit), which is often much faster at performing the specific types of operations neural networks need (matrix multiplications) than CPUs. [Read more](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb#scrollTo=Running_tensors_on_GPUs_and_making_faster_computations_).
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTE0NDkwOTc2NTJdfQ==
+-->
