md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -1,5 +1,8 @@
 # [01. PyTorch Workflow Fundamentals](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb)
+
+### Useful links:
+* https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3MDcyNTExOCwtMTY4MTExNzQ4OCw3Mz
+eyJoaXN0b3J5IjpbMTA0MTQ3MTM4NSwtMTY4MTExNzQ4OCw3Mz
 A5OTgxMTZdfQ==
 -->
