md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -1,8 +1,8 @@
 # [01. PyTorch Workflow Fundamentals](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb)
 
 ### Useful links:
-* https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb
+* [learnpytorch.io link](https://www.learnpytorch.io/01_pytorch_workflow/)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA0MTQ3MTM4NSwtMTY4MTExNzQ4OCw3Mz
-A5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTk1MjMzNDMyLC0xNjgxMTE3NDg4LDczMD
+k5ODExNl19
 -->
