md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -1,7 +1,10 @@
 # [01. PyTorch Workflow Fundamentals](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/01_pytorch_workflow.ipynb)
 
 * [learnpytorch.io link](https://www.learnpytorch.io/01_pytorch_workflow/)
+
+---
+The essence of machine learning and deep learning is to take some data from the past, build an algorithm (like a neural network) to discover patterns in it and use the discoverd patterns to predict the future.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI0NTgzNzI2NCwtOTUyMzM0MzIsLTE2OD
-ExMTc0ODgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTkxOTc1MjAsLTk1MjMzNDMyLC0xNjgxMT
+E3NDg4LDczMDk5ODExNl19
 -->
