md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -3,8 +3,9 @@
 * [learnpytorch.io link](https://www.learnpytorch.io/01_pytorch_workflow/)
 
 ---
-The essence of machine learning and deep learning is to take some data from the past, build an algorithm (like a neural network) to discover patterns in it and use the discoverd patterns to predict the future.
+
+The essence of machine learning and deep learning is to take some data from the past, build an algorithm (like a neural network) to discover patterns in it and use the discovered patterns to predict the future.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxOTc1MjAsLTk1MjMzNDMyLC0xNjgxMT
-E3NDg4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbMTU2MTIwNjc0MSwtOTUyMzM0MzIsLTE2OD
+ExMTc0ODgsNzMwOTk4MTE2XX0=
 -->
