md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -45,7 +45,11 @@ Specifically, we're going to cover:
 </tr>
 </tbody>
 </table>
+
+---
+Again, it's best to learn via examples. Let's build a basic algorithm that given some `(x,y)` pairs to *study* is able to
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY2NTM5NDMxOCwxNTYxMjA2NzQxLC05NT
-IzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbNjQ4ODUyODkxLDE2NjUzOTQzMTgsMTU2MT
+IwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2
+XX0=
 -->
