md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -47,9 +47,11 @@ Specifically, we're going to cover:
 </table>
 
 ---
-Again, it's best to learn via examples. Let's build a basic algorithm that given some `(x,y)` pairs to *study* is able to
+Again, it's best to learn via examples. Let's build a basic model that learns the pattern of a straight line and matches it. The model learns by *studying* `(x,y)` pairs, and after that, for given `x` values, it return corresponding `y` values.
+
+## 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjQ4ODUyODkxLDE2NjUzOTQzMTgsMTU2MT
+eyJoaXN0b3J5IjpbMzczNjEwNDUwLDE2NjUzOTQzMTgsMTU2MT
 IwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2
 XX0=
 -->
