md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -49,9 +49,14 @@ Specifically, we're going to cover:
 ---
 Again, it's best to learn via examples. Let's build a basic model that learns the pattern of a straight line and matches it. The model learns by *studying* `(x,y)` pairs, and after that, for given `x` values, it return corresponding `y` values.
 
-## 
+## 0. Prerequisites
+```py
+import torch
+from torch import nn # nn contains all of PyTorch's building blocks for neural networks
+import matplotlib.pyplot as plt # 
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzczNjEwNDUwLDE2NjUzOTQzMTgsMTU2MT
-IwNjc0MSwtOTUyMzM0MzIsLTE2ODExMTc0ODgsNzMwOTk4MTE2
-XX0=
+eyJoaXN0b3J5IjpbLTE2ODE0NDE4ODQsMTY2NTM5NDMxOCwxNT
+YxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgx
+MTZdfQ==
 -->
