md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -53,10 +53,12 @@ Again, it's best to learn via examples. Let's build a basic model that learns th
 ```py
 import torch
 from torch import nn # nn contains all of PyTorch's building blocks for neural networks
-import matplotlib.pyplot as plt # 
+import matplotlib.pyplot as plt # conda install -c conda-forge matplotlib
 ```
+
+## 1. Data preparing and loa
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2ODE0NDE4ODQsMTY2NTM5NDMxOCwxNT
+eyJoaXN0b3J5IjpbLTEyODAyODU1NzUsMTY2NTM5NDMxOCwxNT
 YxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgx
 MTZdfQ==
 -->
