md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -56,9 +56,34 @@ from torch import nn # nn contains all of PyTorch's building blocks for neural n
 import matplotlib.pyplot as plt # conda install -c conda-forge matplotlib
 ```
 
-## 1. Data preparing and loa
+## 1. Data preparing and loading
+```py
+# Create *known* parameters
+weight = 0.7
+bias = 0.3
+
+# Create data
+start = 0
+end = 1
+step = 0.02
+X = torch.arange(start, end, step).unsqueeze(dim=1)
+y = weight * X + bias
+X[:5], y[:5]
+```
+```cpp
+(tensor([[0.0000],
+         [0.0200],
+         [0.0400],
+         [0.0600],
+         [0.0800]]),
+ tensor([[0.3000],
+         [0.3140],
+         [0.3280],
+         [0.3420],
+         [0.3560]]))
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyODAyODU1NzUsMTY2NTM5NDMxOCwxNT
-YxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgx
-MTZdfQ==
+eyJoaXN0b3J5IjpbLTcwNzk5ODQwMCwxNjY1Mzk0MzE4LDE1Nj
+EyMDY3NDEsLTk1MjMzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODEx
+Nl19
 -->
