md/01.md updated from https://stackedit.io/

--- a/md/01.md
+++ b/md/01.md
@@ -82,8 +82,10 @@ X[:5], y[:5]
          [0.3420],
          [0.3560]]))
 ```
+---
+###  Splitting data into training and test sets
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcwNzk5ODQwMCwxNjY1Mzk0MzE4LDE1Nj
-EyMDY3NDEsLTk1MjMzNDMyLC0xNjgxMTE3NDg4LDczMDk5ODEx
-Nl19
+eyJoaXN0b3J5IjpbLTIxMTE2NjM0MDAsMTY2NTM5NDMxOCwxNT
+YxMjA2NzQxLC05NTIzMzQzMiwtMTY4MTExNzQ4OCw3MzA5OTgx
+MTZdfQ==
 -->
